# nramh-lis

./: .env  .gitignore  CLAUDE.md  index.html  next.config.js  package.json  pnpm-lock.yaml  repomix-output.xml  sign-exe.sh  tailwind.config.js  tsconfig.tsbuildinfo
app/: lab-results-listener.tsx  layout.tsx  page.tsx
components/: database-example.tsx  navigation.tsx
docs/: BF-6500 LIS.md  CQ 5 Plus Communication Protocol.md  architecture.mermaid  autoquant-meril-service.md  backend-architecture.md  file-structure.txt  file_structure.txt  (+8 more)
src-tauri/: Cargo.toml  STORAGE_IMPLEMENTATION_PLAN.md  tauri.conf.json  test_astm_client.rs
src-tauri/.config/nramh-lis/database.sqlite/: lis.db
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_analyzers_table.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs  migrations.rs  state.rs
src-tauri/src/api/commands/: bf6500_handler.rs  bf6900_handler.rs  ip_handler.rs  meril_handler.rs  mod.rs
src-tauri/src/api/handlers/: mod.rs
src-tauri/src/command/: lis_command.rs  meril_commands.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: mod.rs  sample.rs  test_order.rs  upload.rs
src-tauri/src/handler/: lis_handler.rs  meril_handler.rs  mod.rs
src-tauri/src/handlers/: ip_handler.rs
src-tauri/src/infrastructure/error/: mod.rs
src-tauri/src/model/: analyzer.rs  error.rs  mod.rs  patient.rs  result.rs  upload.rs
src-tauri/src/models/: analyzer.rs  hematology.rs  mod.rs  result.rs
src-tauri/src/protocol/: constants.rs  error.rs  hl7_parser.rs  mod.rs
src-tauri/src/protocol/application/: mod.rs  record.rs
src-tauri/src/protocol/astm/: mod.rs
src-tauri/src/protocol/data_link/: frame.rs  mod.rs
src-tauri/src/protocol/physical/: mod.rs  tcp.rs
src-tauri/src/service/: astm.rs  mod.rs  patient_service.rs  result.rs  result_service.rs  test_order_service.rs
src-tauri/src/service/machine/: meril_machine_service.rs  mod.rs
src-tauri/src/services/: autoquant_meril.rs  bf6500_service.rs  bf6900_service.rs  bootup.rs  his_client.rs  mod.rs
src-tauri/src/storage/: db.rs  migrations.rs  mod.rs  repository_manager.rs  sqlite.rs  traits.rs
src-tauri/src/storage/repositories/: analyzer_repository.rs  mod.rs
src-tauri/src/storage/repository/: db.rs  mod.rs  sqlite.rs
src-tauri/src/storage/traits/: mod.rs
(+61 files in other folders)
